# TRVD_2026_404-TN_Talashov_Labs

./: .env  .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  smoke_runner.py
backend/alembic/: env.py
backend/alembic/versions/: 20260328_0001_initial_schema.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: __init__.py  celery_app.py  config.py  cookies.py  csrf.py  logging.py  rate_limit.py  redis.py  request_context.py  security.py
backend/app/db/: base.py  encrypted_type.py  imports.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/appointments/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  model.py  repository.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/common/: __init__.py  enums.py  utils.py
backend/app/modules/doctors/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/medical_records/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/payments/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/reminders/: __init__.py  model.py  repository.py  service.py  tasks.py
backend/app/modules/reports/: repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  helpers.py  test_appointments.py  test_auth.py
(+54 files in other folders)
